# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "oschat.penlight.ai"
version = "3.0.0"
description = "Official OS Chat app for penlight.ai"
authors = ["Nasfame <laciferin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://oschat.streamlit.app"
repository = "https://github.com/aiFame/oschat.penlight.ai"
documentation = "https://github.com/aiFame/oschat.penlight.ai/"
keywords = ["ai", "decenter", "ai-infra"]


packages = []

classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.x",

  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Streamlit",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Your License Here",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
]


[tool.poetry.dependencies]
python = "^3.10"
clarifai = "^9.8.1"
clarifai-grpc = "^9.8.2"
colorama = "^0.4.6"
colored = "^2.2.3"
gtts = ">=2.3.2,<2.4.0"
icecream = "^2.1.3"
joblib = "^1.3.2"
langchain = "^0.0.289"

openai = "^0.28.0"
pinecone-client = "^2.2.2"
pytest = ">=7.4.0,<7.5.0"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-benchmark = "^4.0.0"
flake8-in-file-ignores = "^0.2.2"
pre-commit = "^3.4.0"

[build-system]
# requires = ["python>=3.10", "setuptools", "wheel"]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]


[tool.poetry.extras]
dev = ['pytest']
ml = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "tensorflow",
  "keras",
  "pytorch",
  "spacy",
]

# A list of all of the optional dependencies, some of which are included in the
# poetry install --extras
# poetry install --all-extras

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aiFame/oschat.penlight.ai//issues"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
